Print when there is a potential bug, fixes